--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,3 +311,82 @@ main.active{
     font-weight: 400;
     text-transform: uppercase;
 }
+
+/* Styling the form for adding informations */
+
+body{
+    /* background-color: var(--grey); */
+    height: 100vh;
+}
+
+/* Styling the reusable parts */
+.container-form{
+    max-width: 800px;
+    width: 100%;
+    background-color: var(--peach);
+    padding: 30px;
+    margin: 10px auto 0;
+}
+
+/* Using the flex */
+.category label{
+    align-items: center;
+}
+
+.user-details{
+    flex-wrap: wrap;
+    padding: 30px 0;
+}
+
+.user-details, .category{
+    justify-content: space-between;
+}
+
+/* Styling the common fields */
+.container-form, .input-box input, .button input{
+    border-radius: 5px;
+}
+
+/* Styling the title */
+.title-form, .list-form{
+    position: relative;
+}
+
+.title-form::before, .list-form::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 35px;
+    background-color: var(--lightGrey);
+}
+
+/* Styling the input fields and their containers */
+.input-box{
+    width: calc(100% / 2 - 25px);
+    margin-bottom: 30px;
+}
+
+.details{
+    display: block;
+    margin-bottom: 5px;
+}
+
+.input-box input{
+    width: 100%;
+    height: 45px;
+    padding-left: 15px;
+    outline: none;
+    border: 1px solid var(--lightGrey);
+    border-bottom-width: 2px;
+    font-size: 14px;
+}
+
+.input-box input, .button input{
+    transition: all 0.3 ease;
+}
+
+.input-box input:hover, .input-box input:focus, .input-box:valid{
+    border-color: #1B1A17;
+}
